Added Json annotation on class